fixes spacing issues on public page

--- a/client/stylesheets/index.css
+++ b/client/stylesheets/index.css
@@ -19,4 +19,7 @@
 .red-star{
 	color: red;
 }
+.push-right{
+	margin-left: 1em;
+}
 
